--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -48,10 +48,10 @@
                             <span>地域分布</span>
                         </a>
                     </li>
-                    <li class=''>
-                        <a href='chats.html'>
+                    <li class={{register_active}}>
+                        <a href='subview?pageName=RegisterDayPage'>
                             <i class='icon-comments'></i>
-                            <span>Chats</span>
+                            <span>新注册人数统计</span>
                         </a>
                     </li>
                     <li class=''>
